
--Added the (a)ttack command for towns and wilderness. If the target is
  non-hostile it prompts the player for confirmation.

--If the player attacks a non-hostile npc party then the target's alignment
  bits are cleared from the player's alignment bits. In other words, the npc
  party and all of its allies are now the player's enemies. If you attack a
  townsperson all the other townspeople and the guards will attack you if they
  can. Note that they still aren't smart enough to pathfind through impassable
  mechanisms, so a door is enough to hold them off.

--Fixed some issues with sunrise/sunset. The sun now begins to appear in the
  sky window at sunrise, and is completely gone by sunset. The light fades in
  and out over the space of the first hour after sunrise and before sunset,
  respectively. The code to calculate sunlight now uses a single consistent
  forumula, and does so for the moons as well as the sun (more on that below).

--The moons now provide light depending on their arc and phase. They can
  provide at most 128 light units, whereas the sun can provide 255 (max is 255
  due to the way the lightmap gets built in map.c). So even with a full moon
  things are a bit dim.

--Replaced the u4 moon sprites with my own, since mine are 16x16 and u4 is
  only 8x16. Makes the full moons look full.

--The final contents of the cmdwin are now shown on the main console.

--New feature in the console. If a message is a repeat of the last one then
  instead of printing it again the console will print a notice of how many time
  the message has repeated so far. Also changed the way "slow progress" and
  friends are reported so that it takes advantage of this feature.

--Added a new character to Green Tower. Shroom the Hag owns the reagent shop.

--Added a druid class.

--Npc parties in wander mode no longer walk over hazardous terrain. I was
  getting concerned about Shroom walking around in the firepit at the White
  Stag Lodge. :-)

