@@ -61,6 +61,15 @@ FORMATION f_campsite {
         .  .  .  14 .  .  .
 }
 
+FORMATION Checker_Formation {
+        w 9;
+        h 3;
+        n 9;
+        3 . 1 . 0 . 2 . 4
+        . 7 . 5 . 6 . 8 .
+        . . . . . . . . .
+}
+
 FORMATION f_football {
         w 9;
         h 3;
@@ -89,7 +98,7 @@ player {
   food      1000;
   gold      500;
   alignment (ALIGN_PLAYER|ALIGN_TOWN);
-  formation f_football;
+  formation Checker_Formation
   campsite_map m_campsite;
   campsite_formation f_campsite;
   
