@@ -92,3 +92,10 @@ Changes for nazghul-0.1.2
   Stag Lodge. :-)
 
 
+--Bugfix: combat resulting from a conversation was not placing the opponent on
+  the combat map. This broke when I made towns function in party mode like the
+  wildernesses. Before that change combat just occurred in town so I didn't
+  need to setup the npc party in the combat map.
+
+
+
